Fix Line Breaks on small screens
Update CSS to remove hiding line breaks when the screen is under 739px.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2748,10 +2748,6 @@ input, select, textarea {
 				letter-spacing: 0;
 			}
 
-				header.major p br {
-					display: none;
-				}
-
 		footer.major {
 			margin-top: 0;
 		}
@@ -3245,10 +3241,6 @@ input, select, textarea {
 					font-size: 1em;
 					letter-spacing: 0;
 				}
-
-					#header p br {
-						display: none;
-					}
 
 				#header.alt {
 					padding: 4em 2em 1em 2em ;
